--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,8 +9,8 @@ branches:
 build: off
 
 install:
-  - java -jar ./artifacts/app-mbank.jar &
+  - java -jar ./artifacts/app-order.jar &
 
 build_script:
   - chmod +x gradlew
- 
+  - ./gradlew test --info -Dselenide.headless=true
